<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="anime"
            type="website.aursoft.myanimeschedule.data.Anime"/>
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/animeCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/itemEpisodesNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintStart_toEndOf="@+id/animeItemIcon"
                app:layout_constraintTop_toBottomOf="@+id/animeItemTitle"
                app:numberText="@{anime.episodes}"
                tools:text="24" />

            <TextView
                android:id="@+id/animeItemTitle"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginStart="@dimen/margin_normal"
                android:fontFamily="@font/roboto_mono_bold"
                android:text="@{anime.title}"
                android:textColor="@color/red_accent_700"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/animeItemIcon"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="One Piece" />

            <ImageView
                android:id="@+id/animeItemIcon"
                android:layout_width="73dp"
                android:layout_height="104dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:remoteImage="@{anime.imageUrl}"
                android:contentDescription="@string/anime_image_desc"
                tools:srcCompat="@drawable/no_image" />

            <TextView
                android:id="@+id/itemEpisodesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/episodes_text"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/itemEpisodesNumber"
                app:layout_constraintStart_toEndOf="@+id/itemEpisodesNumber" />

            <ImageView
                android:id="@+id/watchingIconItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:imageVisible="@{anime.isWatching}"
                android:contentDescription="@string/watching_icon"
                app:tint="@color/red_accent_200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/watching_24" />

            <TextView
                android:id="@+id/itemSourceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{anime.source}"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/itemEpisodesNumber"
                app:layout_constraintTop_toBottomOf="@+id/itemEpisodesNumber"
                tools:text="Manga" />

            <TextView
                android:id="@+id/itemScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/score_text"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/itemSourceText"
                app:layout_constraintTop_toBottomOf="@+id/itemSourceText" />

            <TextView
                android:id="@+id/itemScoreNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/itemScoreText"
                app:layout_constraintStart_toEndOf="@+id/itemScoreText"
                app:layout_constraintTop_toTopOf="@+id/itemScoreText"
                app:numberText="@{anime.score}" />

            <TextView
                android:id="@+id/itemTypeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:text="@{anime.type}"
                app:layout_constraintBottom_toBottomOf="@+id/itemEpisodesText"
                app:layout_constraintStart_toEndOf="@+id/itemEpisodesText"
                app:layout_constraintTop_toTopOf="@+id/itemEpisodesText"
                tools:text="TV" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="top"
                app:constraint_referenced_ids="itemEpisodesNumber,itemSourceText,itemScoreText,itemTypeText,itemScoreNumber"
                tools:layout_editor_absoluteX="10dp"
                tools:layout_editor_absoluteY="48dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>